FIX: Corrigindo o overflow do container do SoonTemplate

--- a/src/components/templates/SoonTemplate/styles.module.scss
+++ b/src/components/templates/SoonTemplate/styles.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  overflow-y: hidden;
 
   &__container {
     position: relative;
